# mnutree

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE.txt  README.rst  docker-compose.yml  pytest.ini  report.html  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/mnuapi/: __init__.py  req_processor.py
src/mnutree/: __init__.py  main.py  processor.py  skeleton.py
tests/: __init__.py  conftest.py  data.json  test_main.py  test_mnuapi.py  test_processor.py  test_skeleton.py
tests/features/: service.feature
tests/step_defs/: __init__.py  conftest.py  test_service.py
