[metadata]
name = mnutree
description = A json menu tree generator from csv file
author = Gaurav J
author-email = gaurav.joshi@mastek.com
license = mit
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/gaurrav-j/mtree
project-urls =
    Documentation = https://github.com/gaurrav-j/mtree
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
   httpx
   fastapi
   uvicorn
   pytest-asyncio
   python-multipart

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    coverage
    pytest-cov

[options.entry_points]
console_scripts =
     mnutree = mnutree.main:run
     mnuapi = mnuapi:run

[test]
extras = True

[tool:pytest]
addopts = -s -ra -q --cov
norecursedirs =
    dist
    build
    .tox
    .git
    venv
    site-packages
    .eggs
testpaths = tests
python_files =
    *_tests.py
    *_fixture.py
    test_*.py
required_plugins =
    pytest-cov
    pytest-html


[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.2.3
package = mnutree
